# cheviot-build

./: .gitignore  README.md  mk-kernel-img-ufs.sh  mk-kernel-img.sh  mk-kernel.img.sh  mk-sdcard-image-ufs.sh  mk-sdcard-image.sh  root.mtree
archived/: boot.mtree  ifs.mtree  mk-sdcard-image.sh
bootloader/: Makefile.am  Makefile.in  bootinfo.h  configure  configure.ac  doprintf.c  elf.c  elf.h  globals.c  globals.h  main.c  makefile.in  string.h
bootloader/boards/raspberry_pi_1/: aux_uart.c  aux_uart.h  bootstrap.c  bootstrap.h  common.h  debug.c  debug.h  init.c  led.c  led.h  linker.ls  memory.c  memory.h  peripheral_base.h  start.S
bootloader/boards/raspberry_pi_4/: aux_uart.c  aux_uart.h  bootstrap.c  bootstrap.h  common.h  debug.c  debug.h  gpio.c  gpio.h  init.c  peripheral_base.h  start.S
cmake/: binutils.cmake  bootloader.cmake  build-createrpikernelimg.cmake  build-image-ufs.cmake  build-image.cmake  build-mkifs.cmake  build-pseudo.cmake  build-skeleton-boot.cmake  build-skeleton-root.cmake  drivers.cmake  filesystems.cmake  gcc.cmake  kernel.cmake  libc-newlib-interim.cmake  libc-newlib.cmake  libs-bsdlibs.cmake  libs-fixincludes.cmake  libs-hal.cmake  libs-libs.cmake  servers.cmake  utils-bsdutils.cmake  utils-tests.cmake  utils.cmake
createrpikernelimg/: Makefile.am  Makefile.in  configure  configure.ac  main.c
device-tree-sources/: bcm2711-rpi-4-b.prep.dts  device-tree-notes.md
mkifs/: Makefile  Makefile.am  Makefile.in  configure  configure.ac  lists.h  main.c
skeleton-boot/: readme.md
skeleton-boot/rpi4/: config.txt
skeleton-root/: Makefile  Makefile.am  Makefile.in  configure  configure.ac
skeleton-root/root/etc/: profile  s.shutdown  s.startup  startup.cfg  termcap  ttys
skeleton-root/root/lib/firmware/dt/: rpi4.dtb
