# Setup the build/host directory structure, effectively laying the keel
# of the project.  See Makefile.am for the creation of the directory tree

AC_INIT([skeleton-root],[1.0])
AM_INIT_AUTOMAKE([-Werror subdir-objects foreign])

AC_PROG_CC
AM_PROG_AS

AC_CONFIG_FILES([
  Makefile
  ])
  
AC_OUTPUT

